# outsera_tech_challenge

./: Dockerfile  LICENSE  README.md  example.env  pyproject.toml
src/: app.py
src/api/endpoints/: movies_api.py
src/config/: environment.py  logs.py
src/controllers/: movies_controller.py
src/interfaces/repositories/: movies_repository_interface.py
src/interfaces/usecases/: movies_usecase_interface.py
src/models/: movies_orm.py
src/repositories/: movies_repository.py
src/schemas/: movies_schema.py
src/usecases/: movies_usecase.py
src/utils/: camel_case.py  data_sorting.py  sample_data.py
tests/: conftest.py
tests/test_endpoints/: test_movies.py
